--- a/public/post/2019-03-22-digital-representations.Rmd
+++ b/public/post/2019-03-22-digital-representations.Rmd
@@ -48,7 +48,9 @@ Most likely, you need to either find some or create a digitized version of that 
 If you take the former option, you first inclination might be to go to somewhere like [kern scores](http://kern.ccarh.org/) or see what something like the [SIMSSA project](https://simssa.ca/) curates and to see what is available.
 If you pop on over there for a second, you see a sample of what you can select from.
 For the most part, it's like a worse version of the old dead white dude problem that is being faced in both curricula and the performance world right now.
-In addition to a lot of dead men, we also get a lot of folk songs, primarily with Hurons's digitizing of Schaffrath's work with the Essen collection^[Schaffrath, H. (1995). The Essen Folksong Collection in Kern Format. [computer database]. D. Huron (ed.). Menlo Park, CA: Center for Computer Assisted Research in the Humanities, 1995.].
+That said, there is still tons of data there. 
+Based on what is current there, the kern scores page has 7,866,496 notes from 108,703 files.
+In addition to a lot of dead men, we also get a lot of folk songs, primarily with Hurons's digitizing of Schaffrath's work with the Essen collection.^[Schaffrath, H. (1995). The Essen Folksong Collection in Kern Format. [computer database]. D. Huron (ed.). Menlo Park, CA: Center for Computer Assisted Research in the Humanities, 1995.]
 You'll notice that there are not a lot of complete sets of lieder, full-on symphonies, or much new music (copyright and public domain are obviously also an issue).
 
 If you take the latter option, you have to do encode these melodies yourself and digitizing music is not fun at all.
@@ -66,12 +68,13 @@ I think encoding needs to be much more of a community effort and we can look to 
 For example, in psychology, undergrad students taking psych courses in the USA are generally required to take part in experiments which generate the data for the papers that the field of psychology generally reads. 
 Using such restricted samples leads to problems in that this data is basically [WEIRD](https://slate.com/technology/2013/05/weird-psychology-social-science-researchers-rely-too-much-on-western-college-students.html), but I think you could argue it's better than not collecting any data.
 In music, we don't really have this problem as much because our research is not this-kind-of-data driven, nor should it in many topics.
-But in cases like the one I'm describing here, we have our own weird, little problem. 
+But in cases like the one I'm describing here, we have our own litte weird problem. 
 
-To remedy this, I imagine a world where in teaching music theory-- where often competence in a computer notation is a learning objective-- we spend a bit of time talking about this problem of (digital) representation in music.
-If every small, little classroom were encodes some pop melodies (also a transcription exercise!), encode a Shostakovitch Fugue (a project I have been putting off for years now), or even does one part of a symphony, all of this data would slowly start to accumulate for anyone to model.
-This would lead to a deluge of new data for researchers to use, allow for Meyerian comparisons between styles, and teach students about serious pressing problems in research while having them learn about notational software.
-Also once compositions cross into the public domain, we as a research community can work towards having more more music, more accessible to more people in the form of open scores.
+To remedy this, I imagine a world where in teaching music theory-- where often competence in a computer notation is a learning objective-- we spend a bit of time talking about this problem of (digital) representation in music.^[Also a great place to talk about human biases in algorithms, the need to be ethical in research...]
+If every classroom were encodes some pop melodies (also a transcription exercise!), encode a Shostakovitch Fugue (a project I have been putting off for years now), or even encode one part of a symphony, all of this data would slowly start to accumulate for anyone to model.
+Doing this would lead to a deluge of new data for researchers to use, allow for Meyerian comparisons between styles, and teach students about serious pressing problems in research while having them learn about notational software.
+This also will expose them to the field of computational musicology, something that I didn't even know existed until half-way through my Masters in _psychology_. 
+Additionally, once compositions cross into the public domain, we as a research community can work towards having more music, more accessible to more people in the form of open scores.
 
 So it could be that there is this tired trope of Bach-as-machine (which certainly plays into it), but I'd be interested to know how much of what we do is just by-products of the means we have to answer those questions.
 Either way, as noted by [Robert Komaniecki](https://twitter.com/Komaniecki_R/status/1108825660653473792), hats off to the Google team for getting people to get so fired up about part-writing.
