--- a/public/post/2019-03-27-sempre-grad-conference-2019.Rmd
+++ b/public/post/2019-03-27-sempre-grad-conference-2019.Rmd
@@ -43,7 +43,7 @@ Listening to all these talks only reiterated assertions made earlier in the keyn
 
 The start of the afternoon session was reminiscent of last summer’s multi-hub ICMPC conference as the winner of Sempre’s [Hickman](https://www.sempre.org.uk/awards/hickman) award, [Lindsay Warrenbug](https://twitter.com/LAWarrenburg), skyped into the conference to deliver her paper on Melancholy and Grief in Music. 
 It’s nice to see the music science community putting their money where their mouth is on making remote presentations a possibility for presenters (something also heavily advocated for by the [SysMus Series](https://sites.google.com/site/sysmusconference/)). 
-Not to throw shade, but this is something that my home discipline of Music Theory needs to do a bit of catch-up on.^[Which I only mention as persona grivence since I was not able to present some of my own work this year at a conference I attened to and was not able to attend because of travel...] 
+Not to throw shade, but this is something that my home discipline of Music Theory needs to do a bit of catch-up on.^[Which I only mention as personal grivence since I was not able to present some of my own work this year at a conference that I was not able to attend because of travel...] 
 I look forward to the inevitable SMT Discuss or Twitter feud where we discuss if a person who can’t be to the national meeting in-person should instead be swapped out for someone who can. 
 
 The rest of the talks in the afternoon were all extremely interesting. 
